Revision history for MooseX-Types-Stringable

{{$NEXT}}

0.002     2013-11-02 21:42:57 America/New_York

    [DOCUMENTATION]

    - Fixed missing =encoding command

0.001     2012-03-26 22:55:10 EST5EDT
    - initial release
