@@ -7,6 +7,8 @@ copyright_year   = 2012
 [@DAGOLDEN]
 :version = 0.056
 stopwords = Stringable
+stopwords = ArrayRefOfStringable
+stopwords = ArrayRefOfStringlike
 stopwords = Dagfinn
 stopwords = Ilmari
 stopwords = Mannsåker
