@@ -2,6 +2,11 @@ Revision history for MooseX-Types-Stringable
 
 {{$NEXT}}
 
+    [ENHANCEMENTS]
+
+    - new ArrayRefOfStringlike, ArrayRefOfStringable types to facilitate
+      coercion of lists
+
 0.002     2013-11-02 21:42:57 America/New_York
 
     [DOCUMENTATION]
